--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Alpha-Robot</string>
-    <string name="welcome_text">Welcome To Alpha Robot Application</string>
+    <string name="welcome_text">Alpha Robot</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home</string>
@@ -11,7 +11,7 @@
     <string name="lorem_ipsum">
        this is the test message
     </string>
-    <string name="received_message">recieved message</string>
+    <string name="received_message">received message</string>
     <string name="date">date</string>
     <string name="sent_message">sent message</string>
     <string name="type_your_message">Type your message...</string>
