--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="recording_error">Error while Recording</string>
     <string name="record_not_saved">Not Saved Record</string>
     <string name="third_party_call_failed">Third Party Call Failed </string>
+    <string name="transcribed_message">transcribed message</string>
 </resources>
