--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="record_not_saved">Not Saved Record</string>
     <string name="third_party_call_failed">Third Party Call Failed </string>
     <string name="transcribed_message">transcribed message</string>
+    <string name="chat_with_me">chat with me?</string>
 </resources>
