--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Alpha-Robot</string>
-    <string name="welcome_text">Alpha Robot</string>
+    <string name="app_name">Branch-Bots</string>
+    <string name="welcome_text">Branch Bots</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home</string>
@@ -26,4 +26,5 @@
     <string name="transcribed_message">transcribed message</string>
     <string name="chat_with_me">chat with me?</string>
     <string name="error_while_saving_audio_file">Error while saving audio file</string>
+    <string name="chatbot">ChatBot</string>
 </resources>
